# telemforge

./: .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/domain/: README.md
apps/web/: Dockerfile  index.html  package.json
apps/web/src/: App.tsx  index.css
docs/: api-outline.md  architecture.md  roadmap.md
docs/automation/: control.md  system.md
docs/automation/inbox/: sam-automation-directive-2026-04-27T160030Z.md
docs/automation/queue/: current_task.md  next_cycle.md
docs/automation/runs/: automation-bootstrap-2026-04-27.md
docs/automation/state/: executor.json  governor.json  health.json  hermes_supervisor.json  human_overrides.json  planner.json  repo_hygiene.json  stage_state.json
docs/development/: README.md  adr-template.md  principles.md  review-loop.md
docs/development/steps/: 00-working-agreement.md  01-stack-and-workspace.md  02-telemetry-contracts-and-fixtures.md  03-simulation-spike-and-visualization.md  04-api-skeleton-and-storage.md  05-live-console-foundation.md  06-faults-alerts-and-events.md  07-replay-and-anomaly.md  08-hardening-docker-and-release.md
