[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telemforge-api"
version = "0.1.0"
description = "Template FastAPI backend for the TelemForge project."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.setuptools]
packages = ["app"]

